Fix scrollbars always visible on linux (#269)
* Use minimal, spread out mcq options

- One option on each line, spaced out.
- minimal button that only shows a differnce when it is active.

* Add getButtonIntent function

* Update mock questions

* Format files

* Make mock question's graded hints null

* Fix scrollbars always visible on linux

--- a/src/styles/_playground.scss
+++ b/src/styles/_playground.scss
@@ -12,5 +12,5 @@
    */
   width: 100% !important;
   height: 40vh !important; // 100% results in 0 height, 100vh is too big.
-  overflow: scroll;
+  overflow: auto;
 }
